# polymarket-weather-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
reports/: calibration_test1_2026-05-25.md
scripts/: backtest_simulation.py  calibrate_test1_report.py
src/pwa/: cache.py  cli.py
src/pwa/analysis/: consensus.py  edge.py  kelly.py  report.py
src/pwa/backtest/: calibrate.py
src/pwa/live/: __init__.py  chain.py  clob_trade.py  ctf.py  db.py  engine.py  execution.py  wallet.py
src/pwa/models/: bias.py  kde.py
src/pwa/paper/: __init__.py  analyze.py  db.py  engine.py  pdf_report.py  report.py
src/pwa/polymarket/: clob.py  gamma.py  parser.py
src/pwa/weather/: open_meteo.py  sources.py  stations.py
tests/: test_consensus.py  test_edge.py  test_kde.py  test_kelly.py  test_live_chain.py  test_live_clob_trade.py  test_live_ctf.py  test_live_db.py  test_live_engine.py  test_live_execution.py  test_live_wallet.py  test_paper_db.py  test_paper_engine.py  test_parser.py
