[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-weather-analyzer"
version = "0.1.0"
description = "Statistical analyzer for Polymarket weather/temperature markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Chagas", email = "felipeschagas28@gmail.com" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "tenacity>=8.2",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
pwa = "pwa.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
